--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,14 @@
-* {
-    background-color: blueviolet;
-}
-
 .header {
     text-align: center;
-    border-bottom: white solid 5px;
+    border-bottom: blueviolet solid 5px;
     border-radius: 5%;
 }
 
 .header-title {
-    color: white;
+    color: blueviolet;
     font-size: 3em;
 }
 
 .header-title-explanation {
-    color: white;
     font-size: 1.2em;
 }
