--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,7 @@
-.header {
-    text-align: center;
-    border-bottom: blueviolet solid 5px;
-    border-radius: 5%;
+h1 {
+    color: purple;
 }
 
-.header-title {
-    color: blueviolet;
+p {
     font-size: 3em;
-}
-
-.header-title-explanation {
-    font-size: 1.2em;
 }
