--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,22 @@ h1 {
     color: #7022d6;
 }
 
-p {
-    font-size: 3em;
+.header {
+    text-align: center;
+    font-size: 2em;
 }
 
-.header-image {
-    align-self: center;
+#title {
+    text-align: left;
+    margin-top: 5rem;
+    margin-bottom: 20rem;
+    margin-left: 5rem;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+#redirect {
+    margin-bottom: 5rem;
 }
