--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,20 @@
+/* Index Header */
+
+.bold {
+    font-weight: bold;
+}
+
 h1 {
-    color: #7022d6;
+    color: #660099;
 }
 
 .header {
     text-align: center;
     font-size: 2em;
+}
+
+#redirect {
+    margin-bottom: 5rem;
 }
 
 #title {
@@ -14,10 +24,18 @@ h1 {
     margin-left: 5rem;
 }
 
-.bold {
-    font-weight: bold;
+/* Index Body */
+
+.link {
+    color: #660099;
 }
 
-#redirect {
-    margin-bottom: 5rem;
+.main-body {
+    background-color: #660099;
+    margin-top: 3em;
+}
+
+.reveal-title {
+    color: white;
+    margin-bottom: 1.5em;
 }
