--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,16 @@
 /* Index Header */
 
+.btn-circle {
+    height: 3em;
+    width: 7.5em;
+}
+
 .bold {
     font-weight: bold;
+}
+
+#glyph {
+    font-size: 2em;
 }
 
 h1 {
@@ -19,7 +28,7 @@ h1 {
 
 #title {
     text-align: left;
-    margin-top: 5rem;
+    margin-top: 3rem;
     margin-bottom: 20rem;
     margin-left: 5rem;
 }
