trying new favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
         <title>{{ page.title }}</title>
-        <link href="/css/main.css" rel="stylesheet" type="text/css">
+		<link href="/css/main.css" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" type="image/png" href="/img/Gillette.png"/>
 	</head>
 	<body>
 		<nav>
