--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Curriculum Vitae</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a class="top-nav" href="/">Home</a></li>
+	        	<li><a class="top-nav" href="/about">About</a></li>
+        		<li><a class="top-nav" href="/cv">Curriculum Vitae</a></li>
+        		<li><a class="top-nav" href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
