--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
 
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-size: 1.25em;
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -14,6 +13,15 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+}
+
+.top-nav {
+    font-size: 1.5em;
+}
+
+.top-nav:hover {
+    color: black;
+    text-decoration: underline;
 }
 
 a {
