--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
         <footer>
             <ul>
                 <li><a href="mailto:colingillette35@gmail.com">email</a></li>
-                <li><a href="https://github.com/colingillette">github.com/colingillette</a></li>
+				<li><a href="https://github.com/colingillette">github.com/colingillette</a></li>
+				<li><a href="https://www.linkedin.com/in/colingillette/">linkedin.com/in/colingillette</a></li>
             </ul>
         </footer>
     </body>
