--- a/css/main.css
+++ b/css/main.css
@@ -58,3 +58,24 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+input[type="text"], input[type="email"] {
+    display: inline-block;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    width: 100%;
+    background-color: #580699;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
