replace cv with resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a class="top-nav" href="/">Home</a></li>
 	        	<li><a class="top-nav" href="/contact">Contact Me</a></li>				
-        		<li><a class="top-nav" href="/cv">Curriculum Vitae</a></li>
+        		<li><a class="top-nav" href="/resume">Resum&#233;</a></li>
         		<li><a class="top-nav" href="/blog">Blog</a></li>
     		</ul>
 		</nav>
