--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ nav ul li, footer ul li {
 
 a {
     text-decoration: none;
-    color: lightskyblue;
+    color: #2075fc;
     font-weight: bold;
 }
 
