--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a class="top-nav" href="/">Home</a></li>
-	        	<li><a class="top-nav" href="/contact">Contact Me</a></li>				
-        		<li><a class="top-nav" href="/resume">Resum&#233;</a></li>
-        		<li><a class="top-nav" href="/blog">Blog</a></li>
+        		<li><a class="top-nav out-of-text-link" href="/">Home</a></li>
+	        	<li><a class="top-nav out-of-text-link" href="/contact">Contact Me</a></li>				
+        		<li><a class="top-nav out-of-text-link" href="/resume">Resum&#233;</a></li>
+        		<li><a class="top-nav out-of-text-link" href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -21,9 +21,9 @@
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li><a href="mailto:colingillette35@gmail.com">email</a></li>
-				<li><a href="https://github.com/colingillette">github.com/colingillette</a></li>
-				<li><a href="https://www.linkedin.com/in/colingillette/">linkedin.com/in/colingillette</a></li>
+                <li><a class=" out-of-text-link" href="mailto:colingillette35@gmail.com">email</a></li>
+				<li><a class=" out-of-text-link" href="https://github.com/colingillette">github.com/colingillette</a></li>
+				<li><a class=" out-of-text-link" href="https://www.linkedin.com/in/colingillette/">linkedin.com/in/colingillette</a></li>
             </ul>
         </footer>
     </body>
