--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,13 @@ nav ul li, footer ul li {
 
 a {
     text-decoration: none;
-    color: #2075fc;
+    color: #c361ed;
+    font-weight: bold;
+}
+
+.out-of-text-link {
+    text-decoration: none;
+    color: #b0abb2;
     font-weight: bold;
 }
 
