change link colors again

--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,13 @@ nav ul li, footer ul li {
 
 a {
     text-decoration: none;
-    color: #c361ed;
+    color: #4fbbff;
     font-weight: bold;
 }
 
 .out-of-text-link {
     text-decoration: none;
-    color: #b0abb2;
+    color: #99939b;
     font-weight: bold;
 }
 
