one more style change to link color

--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,13 @@ nav ul li, footer ul li {
 
 a {
     text-decoration: none;
-    color: #4fbbff;
+    color: #277cb1;
     font-weight: bold;
 }
 
 .out-of-text-link {
     text-decoration: none;
-    color: #99939b;
+    color: #999;
     font-weight: bold;
 }
 
