--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,8 @@ input[type="submit"] {
     background-color: #580699;
     color: white;
     padding: 14px 20px;
-    margin: auto;
+    margin-bottom: 1em;
+    margin-left: 10%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
