--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>{{ page.title }}</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138735081-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-138735081-1');
+		</script>
+		<title>{{ page.title }}</title>
 		<link href="/css/main.css" rel="stylesheet" type="text/css">
 		<link rel="shortcut icon" type="image/png" href="/img/Gillette.png"/>
 	</head>
